--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@prisma/client": "^6.3.1",
     "mongodb": "^6.13.0",
     "next": "^15.1.7",
